feat: Add css, library, images chore: update admin controller, jpa DAO, bookOrder, bookServices, PaymentServices