@@ -2,8 +2,8 @@ package com.bookstore.service;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Iterator;
 import java.util.List;
+import java.util.Locale;
 
 import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
@@ -46,49 +46,37 @@ public class PaymentServices {
 		// get payer information
 		Payer payer = getPayerInformation(order);
 		RedirectUrls redirectUrls = getRedirectURLs();
-//		Amount amount = getAmountDetails(order);
-
-		
 
 		// get transaction details
-
 		List<Transaction> transactions = getTransactionInformation(order);
+
 		// request payment
-	
 		Payment requestPayment = new Payment();
 		requestPayment.setPayer(payer)
-					  .setRedirectUrls(redirectUrls)
-					  .setIntent("authorize")
-					  .setTransactions(transactions); 
-		
+				.setRedirectUrls(redirectUrls)
+				.setIntent("authorize")
+				.setTransactions(transactions);
+
 		System.out.println("====== REQUEST PAYMENT: ======");
-		System.out.println(requestPayment);		
-		
+		System.out.println(requestPayment);
+
 		APIContext apiContext = new APIContext(CLIENT_ID, CLIENT_SECRET, mode);
-		
+
 		try {
 			Payment authorizedPayment = requestPayment.create(apiContext);
 			System.out.println("====== AUTHORIZED PAYMENT: ======");
 			System.out.println(authorizedPayment);
-			
+
 			String approvalURL = getApprovalURL(authorizedPayment);
-			
 			response.sendRedirect(approvalURL);
-			
 		} catch (PayPalRESTException e) {
 			e.printStackTrace();
 			throw new ServletException("Error in authorizing payment.");
 		}
-
-		// get approval link
-
-		// redirect to Paypal's payment page
-
 	}
 
 	private String getApprovalURL(Payment authorizedPayment) {
 		String approvalURL = null;
-				
 		List<Links> links = authorizedPayment.getLinks();
 
 		for (Links link : links) {
@@ -97,7 +85,6 @@ public class PaymentServices {
 				break;
 			}
 		}
-		
 		return approvalURL;
 	}
 
@@ -106,38 +93,35 @@ public class PaymentServices {
 		transaction.setDescription("Books ordered on Evergreen Books");
 		Amount amount = getAmountDetails(order);
 		transaction.setAmount(amount);
-		
+
 		ItemList itemList = new ItemList();
 		ShippingAddress shippingAddress = getRecipientInformation(order);
 		itemList.setShippingAddress(shippingAddress);
-		
+
 		List<Item> paypalItems = new ArrayList<>();
-		Iterator<OrderDetail> iterator = order.getOrderDetails().iterator();
-		
-		while (iterator.hasNext()) {
-			OrderDetail orderDetail = iterator.next();
-			Book book = orderDetail.getBook();
-			Integer quantity = orderDetail.getQuantity();
-			
-			Item paypalItem = new Item();
-			paypalItem.setCurrency("USD")
-					  .setName(book.getTitle())
-					  .setQuantity(String.valueOf(quantity))
-					  .setPrice(String.format("%.2f", book.getPrice()));
-			
-			paypalItems.add(paypalItem);			
-		}
-		
+
+        for (OrderDetail orderDetail : order.getOrderDetails()) {
+            Book book = orderDetail.getBook();
+            Integer quantity = orderDetail.getQuantity();
+
+            Item paypalItem = new Item();
+            paypalItem.setCurrency("USD")
+                    .setName(book.getTitle())
+                    .setQuantity(String.valueOf(quantity))
+                    .setPrice(String.format(Locale.US, "%.2f", book.getPrice())); // thêm locale us vô thì không bị lỗi vùng
+
+            paypalItems.add(paypalItem);
+        }
+
 		itemList.setItems(paypalItems);
 		transaction.setItemList(itemList);
-		
+
 		List<Transaction> listTransaction = new ArrayList<>();
 		listTransaction.add(transaction);
-		
+
 		return listTransaction;
-		
 	}
-	
+
 	private ShippingAddress getRecipientInformation(BookOrder order) {
 		ShippingAddress shippingAddress = new ShippingAddress();
 		String recipientName = order.getFirstname() + " " + order.getLastname();
@@ -151,7 +135,7 @@ public class PaymentServices {
 		shippingAddress.setPostalCode(order.getZipcode());
 		return shippingAddress;
 	}
-	
+
 	private Payer getPayerInformation(BookOrder order) {
 		Payer payer = new Payer();
 		payer.setPaymentMethod("paypal");
@@ -181,69 +165,64 @@ public class PaymentServices {
 		System.out.println("Cancel URL: " + cancelUrl);
 		redirectUrls.setCancelUrl(cancelUrl);
 		redirectUrls.setReturnUrl(returnUrl);
-		
+
 		return redirectUrls;
 	}
-	
+
 	private Amount getAmountDetails(BookOrder order) {
 		Details details = new Details();
-		details.setShipping(String.format("%.2f",order.getShippingFee()));
-		details.setTax(String.format("%.2f", order.getTax()));
-		details.setSubtotal(String.format("%.2f", order.getSubtotal()));
+		details.setShipping(String.format(Locale.US, "%.2f", order.getShippingFee()));
+		details.setTax(String.format(Locale.US, "%.2f", order.getTax()));
+		details.setSubtotal(String.format(Locale.US, "%.2f", order.getSubtotal()));
 
 		Amount amount = new Amount();
 		amount.setCurrency("USD");
 		amount.setDetails(details);
-		amount.setTotal(String.format("%.2f", order.getTotal()));
-		
+		amount.setTotal(String.format(Locale.US, "%.2f", order.getTotal()));
+
 		return amount;
 	}
 
 	public void reviewPayment() throws ServletException {
 		String paymentId = request.getParameter("paymentId");
 		String payerId = request.getParameter("PayerID");
-		
+
 		if (paymentId == null || payerId == null) {
 			throw new ServletException("Error in displaying payment review");
 		}
-		
+
 		APIContext apiContext = new APIContext(CLIENT_ID, CLIENT_SECRET, mode);
-		
+
 		try {
 			Payment payment = Payment.get(apiContext, paymentId);
-			
+
 			PayerInfo payerInfo = payment.getPayer().getPayerInfo();
-			Transaction transaction = payment.getTransactions().get(0);
+			Transaction transaction = payment.getTransactions().getFirst();
 			ShippingAddress shippingAddress = transaction.getItemList().getShippingAddress();
-			
+
 			request.setAttribute("payer", payerInfo);
 			request.setAttribute("recipient", shippingAddress);
 			request.setAttribute("transaction", transaction);
-			
+
 			String reviewPage = "frontend/review_payment.jsp?paymentId=" + paymentId + "&PayerID=" + payerId;
 			request.getRequestDispatcher(reviewPage).forward(request, response);
-			
 		} catch (PayPalRESTException | IOException e) {
 			e.printStackTrace();
 			throw new ServletException("Error in getting payment details from PayPal.");
 		}
-		
 	}
 
 	public Payment executePayment() throws PayPalRESTException {
 		String paymentId = request.getParameter("paymentId");
 		String payerId = request.getParameter("PayerID");
-		
+
 		PaymentExecution paymentExecution = new PaymentExecution();
 		paymentExecution.setPayerId(payerId);
-		
-//		Payment payment = new Payment().setId(paymentId);
+
 		Payment payment = new Payment().setId(paymentId);
-		
+
 		APIContext apiContext = new APIContext(CLIENT_ID, CLIENT_SECRET, mode);
-		
+
 		return payment.execute(apiContext, paymentExecution);
-		
-		
 	}
 }
